--- a/CourseWorkC#/CourseWorkC#.csproj
+++ b/CourseWorkC#/CourseWorkC#.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coworker.cs" />
+    <Compile Include="CustomException.cs" />
+    <Compile Include="CustomIterator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
