--- a/CourseWorkC#/CourseWorkC#.csproj
+++ b/CourseWorkC#/CourseWorkC#.csproj
@@ -49,6 +49,12 @@
     <Compile Include="Coworker.cs" />
     <Compile Include="CustomException.cs" />
     <Compile Include="CustomIterator.cs" />
+    <Compile Include="FindCoworker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindCoworker.Designer.cs">
+      <DependentUpon>FindCoworker.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Salary.cs" />
+    <EmbeddedResource Include="FindCoworker.resx">
+      <DependentUpon>FindCoworker.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
